* Background menu balls would sometimes vanish on the "Please do not distribute" screen
* Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
* Red helmet animation will no longer skip frames after the intro scrolling animation
* In internal editor, improve mouse lag and fix bug where mouse cursor would sometimes leave visual artifacts when left-clicking in empty space
* Sometimes there was a missing pixel in the internal editor where two lines touch each other
* The 3 timers (best time, flag tag time, current time) are now properly centered on screen
* Fix bike flickering at high zoom
* Fix some minor bike jitters in replay playback when bike or wheel rotates past an angle of 0 degrees (upright position)
* Fix bike/wheel jitters in replay playback in the first 2 frames of the replay
* Fixed a bug where a replay named a.rec.rec could not be played by elma
* Some minor grammatical or spelling mistakes are fixed
* When replay randomizer is unable to file a level file, Escing goes back to the Replay menu instead of jumping all the way back to Main menu
* Apples and flowers now maintain correct bobbing animation when the view zoom level changes.
* Pictures extremely out of bounds to the far left or right will no longer prevent other pictures and textures from being rendered
* Extremely vertical grass polygon lines could crash, especially at high zoom

## Removed Legacy Features
* It is no longer possible to upgrade from across.res to elma.res
* Readme.txt is no longer autogenerated
* noretrac.inf (software backbuffer) is no longer supported
* fordit.inf (invert volt buttons) is no longer supported
* nemmem.inf (Across memory check) is no longer supported
* files.inf (files are read from ../files, instead of elma.res) is no longer supported
* Debug code to generate elma.res/desclist.txt is removed
* Level files are always unlocked, and you can no longer Save Lock
* 1997 Action SuperCross debug message removed from Save Play