@@ -62,6 +62,7 @@
 * Apples and flowers now maintain correct bobbing animation when the view zoom level changes.
 * Pictures extremely out of bounds to the far left or right will no longer prevent other pictures and textures from being rendered
 * Extremely vertical grass polygon lines could crash, especially at high zoom
+* Replay animations now rewind correctly and apples get restored
 
 ## Removed Legacy Features
 * It is no longer possible to upgrade from across.res to elma.res
